chnaged styling and researching ways to send props to component on another page :)

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
     text-align: center;
   }
  h1 {
-    color: blue;
+    color: #09098b80;
     font-family: verdana;
     text-align: center;
     padding: 30px;
